--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 AUTH0_DOMAIN=dev-n1lb40exoxfu2fwu.us.auth0.com
 AUTH0_CLIENT_ID=O55mNklswNyGzPkVcwDJ1fe9u5JYXrit
 AUTH0_CLIENT_SECRET=GSePcgWy6uR4ZTowH_5stdQ9-PBITZ21k_fr-rAYoewIy2c3zL_dK6LyN3ThflP9
+MONGO_URi = mongodb+srv://durgesh3103:xBWy6cCaAuRXYs4F@cluster0.ddmetjw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
